Thorough rewrite. Remove all notification code; we'll use the standard notification system. Remove akismet user. Change unit tests appropriately. Make file header comments consistent.

--- a/language/en/email/message_marked_as_spam.txt
+++ b/language/en/email/message_marked_as_spam.txt
@@ -1,4 +1,4 @@
-A post at "{SITENAME}" was identified as spam by Gothick Akismet and added to the moderation queue.
+A post at "{SITENAME}" was identified as spam by Akismet and added to the moderation queue.
 
 Title: {TOPIC_TITLE}
 URL: {TOPIC_URL}
